tests/typing/fail/default_arg_fail.rb

class A
  def f(x=0)
    x + 1
  end
end

a = A.new
a.f(2,3)

